--- a/apematcher-react/public/css/ape-matcher.webflow.css
+++ b/apematcher-react/public/css/ape-matcher.webflow.css
@@ -2279,7 +2279,7 @@ a {
   align-items: center;
   width: 100%;
   justify-content: space-between;
-  height: 240px;
+  height: 250px;
   flex-direction: column;
   margin-bottom: 20px;
 }
@@ -2335,10 +2335,16 @@ a {
   border: 2px solid #fff;
   margin: 10px;
   cursor: pointer;
+  border-radius: 10px;
+}
+
+.bayc_box:hover:not(.selected) {
+  border-width: 4px;
+  border-radius: 10px;
 }
 
 .selected {
-  border: 4px solid rgb(33, 179, 251);
+  border-width: 6px;
 }
 
 .deposited-box {
@@ -2357,7 +2363,6 @@ a {
   justify-content: space-around;
 }
 
-.bayc_button .btn_deposit,
 .bayc_button .btn_check {
   padding: 10px 20px;
   border: 2px solid #000000;
